@@ -105,6 +105,9 @@ Bug Fixes
 
 * SOLR-7072: Multiple mlt.fl does not work. (Constantin Mitocaru, shalin)
 
+* SOLR-6775: Creating backup snapshot results in null pointer exception.
+  (Ryan Hesson, Varun Thacker via shalin)
+
 Optimizations
 ----------------------
  * SOLR-7049: Move work done by the LIST Collections API call to the Collections
